[package]
name = "willhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "hidusage", "errhandlingapi", "libloaderapi", "minwindef", "processthreadsapi"] }

[dependencies]
once_cell = "1.17.0"

[dev-dependencies]
ctrlc = "3.2.0"

[[example]]
name = "showcase"
