[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
willhook = { path = ".." }
winapi = { version = "0.3", features = ["winuser", "hidusage", "errhandlingapi", "libloaderapi", "minwindef", "processthreadsapi"] }
mki = "0.2.3"

[lib]
name = "utils"
path = "lib.rs"
